# Fast-SAM-3D-Body

./: README.md  demo_realsense_live.py  pyproject.toml  record_realsense_mp4v.py  run_demo.sh
tools/: setup_checkpoints.sh  setup_chumpy.sh  setup_detectron2.sh
